--- a/covid_19_tracker/android/app/src/main/AndroidManifest.xml
+++ b/covid_19_tracker/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.covid_19_tracker">
+    package="com.levelfivecoder.covid_19_tracker">
     <!-- io.flutter.app.FlutterApplication is an android.app.Application that
          calls FlutterMain.startInitialization(this); in its onCreate method.
          In most cases you can leave this as-is, but you if you want to provide
@@ -9,6 +9,8 @@
         android:name="io.flutter.app.FlutterApplication"
         android:label="covid_19_tracker"
         android:icon="@mipmap/ic_launcher">
+          <meta-data android:name="com.google.android.geo.API_KEY"
+               android:value="AIzaSyA5Uoy8LWZoEDXkRsJzLVeRN8RIb1IYcoY"/>
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
