--- a/covid_19_tracker/pubspec.yaml
+++ b/covid_19_tracker/pubspec.yaml
@@ -23,9 +23,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-
+  google_maps_flutter: ^0.5.11
   http: ^0.12.0+1
   loading: 1.0.2
+  location: ^2.5.0
 
 dev_dependencies:
   flutter_test:
@@ -44,8 +45,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
+  assets:
+   - assets/destination_map_marker.png
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
