--- a/covid_19_tracker/pubspec.yaml
+++ b/covid_19_tracker/pubspec.yaml
@@ -27,6 +27,9 @@ dependencies:
   http: ^0.12.0+1
   loading: 1.0.2
   location: ^2.5.0
+  url_launcher: ^5.0.2
+  flutter_share_me: ^0.9.1
+
 
 dev_dependencies:
   flutter_test:
