--- a/covid_19_tracker/azure-pipeline.yml
+++ b/covid_19_tracker/azure-pipeline.yml
@@ -1,6 +1,6 @@
 # Flutter build
 variables:
-  projectDirectory: sample_project
+  projectDirectory: '.''
 
 jobs:
   - job: Android
@@ -8,13 +8,15 @@ jobs:
       vmImage: 'macOS-10.13'
     steps:
     - task: FlutterInstall@0
+      inputs:
+        channel: 'stable'
+        version: 'latest'
+    
     - task: FlutterBuild@0
       inputs:
         target: apk
         projectDirectory: $(projectDirectory)
-    - task: FlutterTest@0
-      inputs:
-        projectDirectory: $(projectDirectory)
+   
     - task: CopyFiles@2
       inputs:
         contents: '**/*.apk'
