--- a/covid_19_tracker/azure-pipeline.yml
+++ b/covid_19_tracker/azure-pipeline.yml
@@ -1,11 +1,11 @@
 # Flutter build
 variables:
-  projectDirectory: '.''
+  projectDirectory: '.'
 
 jobs:
   - job: Android
     pool:
-      vmImage: 'macOS-10.13'
+      vmImage: 'macOS-latest'
     steps:
     - task: FlutterInstall@0
       inputs:
