Update azure-pipeline.yml for Azure Pipelines

--- a/covid_19_tracker/azure-pipeline.yml
+++ b/covid_19_tracker/azure-pipeline.yml
@@ -1,6 +1,6 @@
 # Flutter build
 variables:
-  projectDirectory: '/covid_19_tracker/'
+  projectDirectory: 'covid_19_tracker'
 
 jobs:
   - job: Android
