made to aab file

--- a/covid_19_tracker/azure-pipeline.yml
+++ b/covid_19_tracker/azure-pipeline.yml
@@ -14,11 +14,11 @@ jobs:
     
     - task: FlutterBuild@0
       inputs:
-        target: apk
+        target: aab
         projectDirectory: $(projectDirectory)
    
     - task: CopyFiles@2
       inputs:
-        contents: '**/*.apk'
+        contents: '**/*.aab'
         targetFolder: '$(build.artifactStagingDirectory)'
     - task: PublishBuildArtifacts@1
