Update azure-pipeline.yml for Azure Pipelines

--- a/covid_19_tracker/azure-pipeline.yml
+++ b/covid_19_tracker/azure-pipeline.yml
@@ -22,7 +22,7 @@ jobs:
       inputs:
         apksignerKeystoreFile: key.jks
         apksignerKeystorePassword: Illus10n
-        apksignerKeystoreAlias: '$(Parameters.keystoreAlias)'
+        apksignerKeystoreAlias: 'key'
         apksignerKeyPassword: Illus10n
     - task: CopyFiles@2
       inputs:
