Update azure-pipeline.yml for Azure Pipelines

--- a/covid_19_tracker/azure-pipeline.yml
+++ b/covid_19_tracker/azure-pipeline.yml
@@ -21,9 +21,9 @@ jobs:
       displayName: 'Signing and aligning APK file(s) **/*.apk'
       inputs:
         apksignerKeystoreFile: key.jks
-        apksignerKeystorePassword: Illus10n
-        apksignerKeystoreAlias: 'key'
-        apksignerKeyPassword: Illus10n
+        apksignerKeystorePassword: $(keypassword)
+        apksignerKeystoreAlias: $(key)
+        apksignerKeyPassword: $(keypassword)
     - task: CopyFiles@2
       inputs:
         contents: '**/*.apk'
