Update azure-pipeline.yml for Azure Pipelines

--- a/covid_19_tracker/azure-pipeline.yml
+++ b/covid_19_tracker/azure-pipeline.yml
@@ -21,6 +21,8 @@ jobs:
     - task: AndroidSigning@3
       displayName: 'Signing and aligning APK file(s) **/*.apk'
       inputs:
+        apkFiles: '**/*.apk'
+        apksign: true
         apksignerKeystoreFile: key.jks
         apksignerKeystorePassword: $(keypassword)
         apksignerKeystoreAlias: $(key)
