--- a/covid_19_tracker/android/app/src/main/AndroidManifest.xml
+++ b/covid_19_tracker/android/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:label="covid_19_tracker"
         android:icon="@mipmap/ic_launcher">
           <meta-data android:name="com.google.android.geo.API_KEY"
-               android:value="<YOUR API KEY HERE>"/>
+               android:value="YOUR API KEY HERE"/>
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
